RESOLVED FIXED 256553
ResizeObserver: Fix node depth computation for shadow nodes
https://bugs.webkit.org/show_bug.cgi?id=256553
Summary ResizeObserver: Fix node depth computation for shadow nodes
Ahmad Saleem
Reported 2023-05-09 14:56:10 PDT
Hi Team, While going through WPT failing in Safari / WebKit, I came across following test, which is failing in WebKit only: Test Link - http://wpt.live/resize-observer/calculate-depth-for-node.html Blink Commit - https://chromium.googlesource.com/chromium/src/+/2b6f3f4bfda3b1326b15a956d06a6e3c5f0bb362 WebKit Source - https://searchfox.org/wubkat/source/Source/WebCore/page/ResizeObservation.cpp#145 Web-Spec: https://github.com/w3c/csswg-drafts/pull/3945 Just wanted to raise, so this can be fixed. Thanks!
Attachments
Ryosuke Niwa
Comment 1 2023-05-10 02:07:33 PDT
EWS
Comment 2 2023-05-10 12:38:27 PDT
Committed 263920@main (495d920632fd): <https://commits.webkit.org/263920@main> Reviewed commits have been landed. Closing PR #13687 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-05-10 12:39:20 PDT
Note You need to log in before you can comment on or make changes to this bug.