ResizeObserver: Fix node depth computation for shadow nodes https://bugs.webkit.org/show_bug.cgi?id=256553

Reviewed by Chris Dumez.

Merge https://chromium.googlesource.com/chromium/src/+/2b6f3f4bfda3b1326b15a956d06a6e3c5f0bb362

* LayoutTests/imported/w3c/web-platform-tests/resize-observer/calculate-depth-for-node-expected.txt:
* Source/WebCore/page/ResizeObservation.cpp:
(WebCore::ResizeObservation::targetElementDepth const):

Canonical link: https://commits.webkit.org/263920@main