Source/WebCore/page/ResizeObservation.cpp
@@ -138,11 +138,12 @@ std::optional<ResizeObservation::BoxSizes> ResizeObservation::elementSizeChanged
     return { };
 }
 
+// https://drafts.csswg.org/resize-observer/#calculate-depth-for-node
 size_t ResizeObservation::targetElementDepth() const
 {
     unsigned depth = 0;
     for (Element* ownerElement = m_target.get(); ownerElement; ownerElement = ownerElement->document().ownerElement()) {
-        for (Element* parent = ownerElement; parent; parent = parent->parentElement())
+        for (Element* parent = ownerElement; parent; parent = parent->parentElementInComposedTree())
             ++depth;
     }
 
